--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation 'androidx.datastore:datastore-preferences-core:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -52,4 +53,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //dots indicator
     implementation("com.tbuonomo:dotsindicator:4.3")
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
